# simple-justwatch-python-api

./: .buildinfo  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  simplejustwatchapi.html  zensical.toml
.doctrees/: environment.pickle  index.doctree  modules.doctree  simplejustwatchapi.doctree
.github/workflows/: black.yml  code-coverage.yml  codeql-analysis.yml  codeql.yml  docs.yml  documentation.yml  flake8.yml  isort.yml  max-complexity.yml  pytest.yml  ruff.yml
_modules/: collections.html  index.html
_modules/simplejustwatchapi/: graphql.html  justwatch.html  query.html  tuples.html
_sources/: index.rst.txt  modules.rst.txt  simplejustwatchapi.rst.txt
docs/: caveats.md  conf.py  index.md  installation.md  license.md  simplejustwatchapi.rst  usage.md
docs/API Reference/: data.md  exceptions.md  functions.md  graphql.md  query.md
docs/Internal API/: graphql.md  query.md
examples/: details_output.py  details_output_show.py  episodes_output.py  offers_for_countries_output.py  popular_output.py  providers_output.py  pyproject.toml  search_output.py  search_output_show.py  seasons_output.py
src/simplejustwatchapi/: __init__.py  exceptions.py  graphql.py  justwatch.py  parser.py  query.py  requests.py  tuples.py
src/simplejustwatchpythonapi/: __init__.py  justwatch.py  parser.py  requests.py
test/: pyproject.toml
test/simplejustwatchapi/: parser_data.py  test_graphql.py  test_justwatch.py  test_parser.py  test_request.py  test_requests.py
test/simplejustwatchpythonapi/: test_justwatch.py  test_parser.py  test_requests.py
