[project]
name = "simple-justwatch-python-api"
authors = [{name = "Electronic Mango", email = "78230210+Electronic-Mango@users.noreply.github.com"}]
version = "0.16"
description="A simple JustWatch Python API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.11"
keywords = ["justwatch", "api", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/Electronic-Mango/simple-justwatch-python-api"
Documentation = "https://electronic-mango.github.io/simple-justwatch-python-api"
Repository = "https://github.com/Electronic-Mango/simple-justwatch-python-api"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "simplejustwatchapi"

[tool.pytest.ini_options]
pythonpath = [
  "src", "test"
]
