[project]
name = "simple-justwatch-python-api"
authors = [
    { name = "Electronic Mango", email = "78230210+Electronic-Mango@users.noreply.github.com" },
]
version = "1.0.3"
description = "A simple JustWatch Python API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
keywords = ["justwatch", "api", "graphql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.28.1"]

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.3",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "zensical>=0.0.32",
]

[project.urls]
Homepage = "https://github.com/Electronic-Mango/simple-justwatch-python-api"
Documentation = "https://electronic-mango.github.io/simple-justwatch-python-api"
Repository = "https://github.com/Electronic-Mango/simple-justwatch-python-api"
Changelog = "https://github.com/Electronic-Mango/simple-justwatch-python-api/blob/main/CHANGELOG.md"
Releases = "https://github.com/Electronic-Mango/simple-justwatch-python-api/releases"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "simplejustwatchapi"

[tool.pytest.ini_options]
pythonpath = ["src", "test"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Type hinting JSONs is problematic
    "COM812",  # Avoid issues with formatter
    "D203",    # Conflicts with D211
    "D212",    # Conflicts with D213
    "FBT",
    "FIX002",
    "PLR0913", # I think it makes sense for functions here to have more arguments
    "TD002",
    "TD003",
]
